force-app/main/default/objects/Field_Usage_Signal__c/Field_Usage_Signal__c.object-meta.xml
<CustomObject>
    <label>Field Usage Signal</label>
    <pluralLabel>Field Usage Signals</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Field Usage Signal Name</label>
        <displayFormat>FUS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>