force-app/main/default/objects/Field_Usage_Signal__c/fields/Custom_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Id__c</fullName>
    <label>Custom Field Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>