force-app/main/default/objects/Field_Usage_Signal__c/fields/Field_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Developer_Name__c</fullName>
    <label>Field Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>