force-app/main/default/objects/Field_Usage_Signal__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <label>Field Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>