force-app/main/default/objects/Field_Usage_Signal__c/fields/Has_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Data__c</fullName>
    <label>Has Data</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>