force-app/main/default/objects/Field_Usage_Signal__c/fields/Is_Likely_Unused__c.field-meta.xml
<CustomField>
    <fullName>Is_Likely_Unused__c</fullName>
    <label>Is Likely Unused</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>