force-app/main/default/objects/Field_Usage_Signal__c/fields/Referenced_In__c.field-meta.xml
<CustomField>
    <fullName>Referenced_In__c</fullName>
    <label>Referenced In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>