force-app/main/default/objects/Field_Usage_Signal__c/fields/Referenced_In_Layout__c.field-meta.xml
<CustomField>
    <fullName>Referenced_In_Layout__c</fullName>
    <label>Referenced In Layout</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>