force-app/main/default/objects/Field_Usage_Signal__c/fields/Scan_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Scan_Batch_Id__c</fullName>
    <label>Scan Batch Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>