force-app/main/default/objects/Field_Usage_Signal__c/fields/Table_Enum_Or_Id__c.field-meta.xml
<CustomField>
    <fullName>Table_Enum_Or_Id__c</fullName>
    <label>Table Enum Or Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>